# ivoryos-barista

./: app.py  fly.toml  pyproject.toml
barista_story_plugin/: __init__.py  plugin.py
barista_story_plugin/templates/: story.html
barista_visual_plugin/: plugin.py
barista_visual_plugin/static/css/: barista_visual.css
barista_visual_plugin/static/js/: barista_visual.js
templates/: satisfy_a_coffee_shop_customer.json
