[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ivoryos-barista-demo"
version = "0.1.0"
description = "Public-facing IvoryOS demo that explains self-driving labs through a coffee barista metaphor."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ivoryos>=1.5.19",
    "ax-platform",
    "flask",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["barista_demo*", "barista_visual_plugin*", "barista_story_plugin*"]

[tool.setuptools.package-data]
barista_visual_plugin = [
    "templates/*.html",
    "static/css/*.css",
    "static/js/*.js",
    "static/img/*.svg",
]
barista_story_plugin = [
    "templates/*.html",
]
